+ /deck/:id/levels with counts api
